# frenchlaw-bench

./: .env.example  .gitignore  README.md  pyproject.toml
data/core/: tasks.csv
data/workflows/cession_actions/: schema.json
scripts/: fetch_documents.py
src/frenchlaw_bench/: __init__.py  cli.py  config.py  json_utils.py
src/frenchlaw_bench/core/: __init__.py  loader.py  rubric_parser.py
src/frenchlaw_bench/documents/: __init__.py  extractor.py
src/frenchlaw_bench/llm/: __init__.py  base.py  openrouter.py
src/frenchlaw_bench/models/: __init__.py  enums.py  result.py  task.py  workflow.py
src/frenchlaw_bench/pipeline/: __init__.py  runner.py
src/frenchlaw_bench/reports/: __init__.py  generator.py
src/frenchlaw_bench/scoring/: __init__.py  aggregator.py  answer_scorer.py  hallucination_detector.py  judge.py  prompts.py  source_scorer.py
src/frenchlaw_bench/workflows/: __init__.py
src/frenchlaw_bench/workflows/cession_actions/: __init__.py  loader.py  schema.py  scorer.py
tests/: conftest.py  test_json_utils.py  test_pipeline.py  test_rubric_parser.py  test_scoring.py
