[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frenchlaw-bench"
version = "0.1.0"
description = "Benchmark d'évaluation des LLM sur le droit français et européen"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
flb = "frenchlaw_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frenchlaw_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
